objects/wkfsl__ShiftAcceptNotification__c.object
<CustomObject>
    <fields>
        <fullName>wkfsl__Facility_Plan__c</fullName>
        <label>Facility Plan</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>wkfsl__ServiceResourceId__c</fullName>
        <label>ServiceResourceId</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>wkfsl__UserId__c</fullName>
        <externalId>true</externalId>
        <label>UserId</label>
        <length>64</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Shift Accept Notification</label>
    <listViews>
        <fullName>wkfsl__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>EmployeeSATrigger Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Shift Accept Notifications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>